entity_macros/tests/ui/derive/ent/unexpected-inner-attr-for-ent-field.stderr
error: Unknown attribute: something at my_field/field
 --> $DIR/unexpected-inner-attr-for-ent-field.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
